--- a/scss/style.scss
+++ b/scss/style.scss
@@ -908,7 +908,8 @@ body {
     .feedback__slider {
         .feedback__slider-item {
             display: flex;
-            max-width: calc(100% / 2);
+            box-sizing: border-box;
+            max-width: calc(100% / 2) - 2px;
             height: 220px;
             margin: 0 15px;
             .feedback__slider-images {
@@ -925,6 +926,7 @@ body {
                 font-family: "Roboto", sans-serif;
                 color: rgb(109, 115, 150);
                 line-height: 1.714;
+
                 span {
                     padding-top: 15px;
                     display: block;
@@ -936,6 +938,9 @@ body {
                     text-align: left;
                     font-weight: bold;
                 }
+            }
+            @media screen and(max-width: 1140px) {
+                margin: 0 0;
             }
         }
 
@@ -1167,7 +1172,13 @@ body {
             }
             .news__courses-content {
                 padding-top: 35px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                min-height: 360px;
                 .news__courses-title {
+                    min-height: 90px;
+                    margin-bottom: auto;
                     font-size: 22px;
                     font-family: "Montserrat", sans-serif;
                     color: #3b404f;
@@ -1178,16 +1189,15 @@ body {
                     transition: all 0.5s;
                 }
                 .news__courses-text {
-                    padding-top: 35px;
                     font-size: 20px;
                     font-family: "Roboto", sans-serif;
                     color: #6d73a0;
                     line-height: 1.714;
                     text-align: left;
+                    margin-bottom: auto;
                 }
                 .news__courses-link {
                     display: inline-block;
-                    margin-top: 30px;
                     font-size: 20px;
                     color: #6d73a0;
                     transition: all 0.5s;
@@ -1209,6 +1219,36 @@ body {
             .news__courses-item {
                 margin: 0 auto 20px;
                 max-width: 360px;
+                .news__courses-content {
+                    // justify-content: start;
+                    min-height: 0;
+                    padding-top: 10px;
+                    .news__courses-title {
+                        min-height: 0;
+                        margin-top: 10px;
+                    }
+                    .news__courses-text {
+                        margin-top: 10px;
+                    }
+                    .news__courses-link {
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        @media screen and(max-width: 400px) {
+            .news__courses-item {
+                .news__courses-content {
+                    .news__courses-title {
+                        font-size: 20px;
+                    }
+                    .news__courses-text {
+                        font-size: 16px;
+                    }
+                    .news__courses-link {
+                        font-size: 16px;
+                    }
+                }
             }
         }
     }
@@ -1325,6 +1365,7 @@ body {
                         font-family: "Roboto", sans-serif;
                         padding: 15px 0px 15px 20px;
                         width: 200px;
+                        border-radius: 0px;
                     }
                     .footer__btn {
                         font-size: 12px;
@@ -1429,31 +1470,39 @@ body {
         text-align: center;
         color: #f8f8f8;
         background-color: $orange;
+        @media screen and(max-width: 400px) {
+            font-size: 25px;
+        }
     }
     fieldset {
-        margin: 0 auto;
-
+        // margin: 0 auto;
         ol {
             list-style: none;
             padding: 10px;
+
             li {
-                margin: 0 auto;
-                max-width: 100%;
                 padding-bottom: 10px;
                 label {
                     font-size: 25px;
                     margin: 0 auto 10px;
                     padding-right: 10px;
                     padding-bottom: 10px;
+                    @media screen and(max-width: 400px) {
+                        font-size: 20px;
+                    }
                 }
                 input:required {
                     height: 100%;
+                    width: 100%;
                     font-size: 20px;
                     padding: 5px;
-                    margin-top: 5px;
+                    margin-top: 10px;
                     border: 2px solid #f1f1f1;
                     border-radius: 5px;
                     overflow: hidden;
+                    @media screen and(max-width: 400px) {
+                        font-size: 16px;
+                    }
                 }
                 textarea {
                     margin-top: 10px;
@@ -1471,8 +1520,9 @@ body {
                     background-color: $orange;
                     border-radius: 5px;
                     overflow: hidden;
-                    float: right;
-                    margin-bottom: 10px;
+                    margin: 0 auto;
+                    display: block;
+
                     color: #f8f8f8;
                     font-size: 16px;
                 }
